@@ -18,6 +18,18 @@
     <minVersion>1.6.0_14</minVersion>
     <maxVersion></maxVersion>
     <jdkPreference>preferJre</jdkPreference>
-    <maxHeapSize>512</maxHeapSize>
+    <maxHeapSize>1024</maxHeapSize>
   </jre>
+  <versionInfo>
+    <fileVersion>1.0.0.0</fileVersion>
+    <txtFileVersion>-</txtFileVersion>
+    <fileDescription>Mobile Atlas Creator Windows Launcher</fileDescription>
+    <copyright>MOBAC developers</copyright>
+    <productVersion>1.0.0.0</productVersion>
+    <txtProductVersion>-</txtProductVersion>
+    <productName>Mobile Atlas Creator</productName>
+    <companyName></companyName>
+    <internalName>Mobile Atlas Creator 1024MB max Heap</internalName>
+    <originalFilename>Mobile Atlas Creator.exe</originalFilename>
+  </versionInfo>
 </launch4jConfig>
